--- a/back/package.json
+++ b/back/package.json
@@ -16,6 +16,10 @@
   },
   "dependencies": {
     "@feathersjs/feathers": "^5.0.0-pre.37",
-    "@feathersjs/koa": "^5.0.0-pre.37"
+    "@feathersjs/knex": "^5.0.0-pre.24",
+    "@feathersjs/koa": "^5.0.0-pre.37",
+    "knex": "^2.4.2",
+    "mysql2": "^3.1.2",
+    "winston": "^3.8.2"
   }
 }
