--- a/back/package.json
+++ b/back/package.json
@@ -2,24 +2,67 @@
   "name": "back",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/client",
+  "engines": {
+    "node": ">= 16.15.0"
+  },
+  "feathers": {
+    "language": "ts",
+    "packager": "npm",
+    "database": "mysql",
+    "framework": "koa",
+    "transports": [
+      "rest"
+    ],
+    "schema": "typebox"
+  },
+  "directories": {
+    "lib": "src"
+  },
+  "files": [
+    "lib/client.js",
+    "lib/**/*.d.ts",
+    "lib/**/*.shared.js"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon -x ts-node src/index.ts",
+    "compile": "shx rm -rf lib/ && tsc",
+    "start": "node lib/",
+    "prettier": "npx prettier \"**/*.ts\" --write",
+    "mocha": "cross-env NODE_ENV=test mocha test/ --require ts-node/register --recursive --extension .ts --exit",
+    "test": "cross-env NODE_ENV=test npm run migrate && npm run mocha",
+    "bundle:client": "npm run compile && npm pack --pack-destination ./public",
+    "migrate": "knex migrate:latest",
+    "migrate:make": "knex migrate:make"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.13.0",
+    "axios": "^1.3.2",
+    "cross-env": "^7.0.3",
+    "mocha": "^10.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@feathersjs/adapter-commons": "^5.0.0-pre.37",
+    "@feathersjs/authentication": "^5.0.0-pre.37",
+    "@feathersjs/cli": "^4.8.0",
+    "@feathersjs/configuration": "^4.5.15",
+    "@feathersjs/errors": "^5.0.0-pre.37",
     "@feathersjs/feathers": "^5.0.0-pre.37",
     "@feathersjs/knex": "^5.0.0-pre.24",
     "@feathersjs/koa": "^5.0.0-pre.37",
+    "@feathersjs/rest-client": "^4.5.15",
+    "@feathersjs/schema": "^5.0.0-pre.37",
+    "@feathersjs/transport-commons": "^5.0.0-pre.37",
+    "@feathersjs/typebox": "^5.0.0-pre.30",
     "knex": "^2.4.2",
     "mysql2": "^3.1.2",
+    "nodemon": "^2.0.20",
+    "shx": "^0.3.4",
     "winston": "^3.8.2"
   }
 }
