--- a/back/package.json
+++ b/back/package.json
@@ -61,6 +61,7 @@
     "@feathersjs/transport-commons": "^5.0.0-pre.37",
     "@feathersjs/typebox": "^5.0.0-pre.37",
     "@koa/cors": "^4.0.0",
+    "dotenv": "^16.0.3",
     "knex": "^2.4.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.1.2",
